--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "ts-project-template",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "kashida-engine",
+  "version": "0.1.0",
+  "description": "An engine to unify array of Arabic strings to the same width using Kashidas",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
-    "build": "rm -rf dist && webpack --config webpack.prod.js"
+    "build": "rm -rf dist && webpack --config webpack.prod.js && npx tsc -d --moduleResolution \"node\" --emitDeclarationOnly --outDir dist/@types/ ./src/types/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -16,13 +15,24 @@
     "@babel/preset-typescript": "^7.15.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^10.2.4",
-    "typescript": "^4.4.3",
+    "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
   },
+  "main": "./dist/kashida-engine.min.js",
+  "module": "./dist/kashida-engine.min.mjs",
+  "types": "./dist/@types/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "dependencies": {
     "core-js": "^3.17.3"
-  }
+  },
+  "keywords": [
+    "kashida",
+    "poem",
+    "arabic"
+  ]
 }
