--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "target": "ESNext",
         "module": "ES6",
         "moduleResolution": "Node",
-        "isolatedModules": false
+        "isolatedModules": false,
+        "declaration": true
     }
 }
