feat: use TS loader to detect ts problems
Use the TypeScript loader to detect all the TypeScript errors and emit
declarations of all files on build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-    "compilerOptions": {
-        "target": "ESNext",
-        "module": "ES6",
-        "moduleResolution": "Node",
-        "isolatedModules": false,
-        "declaration": true
-    }
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ES6",
+    "moduleResolution": "Node",
+    "isolatedModules": false,
+    "declaration": true,
+    "declarationDir": "./dist/declarations/"
+  }
 }
