--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An engine to unify array of Arabic strings to the same width using Kashidas",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
-    "build": "rm -rf dist && webpack --config webpack.prod.js && npx tsc -d --moduleResolution \"node\" --emitDeclarationOnly --outDir dist/@types/ ./src/types/index.ts"
+    "build": "rm -rf dist && webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^10.2.4",
     "terser-webpack-plugin": "^5.3.1",
+    "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
@@ -24,7 +25,7 @@
   },
   "main": "./dist/kashida-engine.min.js",
   "module": "./dist/kashida-engine.min.mjs",
-  "types": "./dist/@types/index.d.ts",
+  "types": "./dist/declarations/index.d.ts",
   "files": [
     "/dist"
   ],
