--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^10.2.4",
+    "terser-webpack-plugin": "^5.3.1",
     "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
